@@ -286,9 +286,9 @@ header = "options/bv_options.h"
   help       = "algebraic inferences for extended functions"
 
 [[option]]
-  name       = "bvPrintConstsInBinary"
+  name       = "bvPrintConstsAsIndexedSymbols"
   category   = "regular"
-  long       = "bv-print-consts-in-binary"
+  long       = "bv-print-consts-as-indexed-symbols"
   type       = "bool"
   default    = "false"
   help       = "print bit-vector constants in binary (e.g. #b0001) instead of decimal (e.g. (_ bv1 4)), applies to SMT-LIB 2.x"
