@@ -1,5 +1,5 @@
 ; EXPECT: sat
-; EXPECT: ((|| (_ bv1 4)))
+; EXPECT: ((|| #b0001))
 (set-option :produce-models true)
 (set-logic QF_BV)
 (declare-const || (_ BitVec 4))
